# igs-ml

./: .env.example  .gitignore  pyproject.toml  requirements.txt
configs/: train.yaml
configs/callbacks/: agc.yaml  batch_size_finder.yaml  default.yaml  dual_threshold_calibrator.yaml  nfnet.yaml  threshold_calibrator.yaml
configs/data/: example.yaml  malaria_patch.yaml  malaria_patch_binary.yaml
configs/db/: default.yaml
configs/experiment/: example.yaml  malaria_patch_baseline.yaml  malaria_patch_baseline_all.yaml  malaria_patch_baseline_all_cj.yaml  malaria_patch_baseline_best.yaml  malaria_patch_focal.yaml  malaria_patch_label_smooth.yaml  malaria_patch_strong_aug.yaml
configs/logger/: aim.yaml  none.yaml
configs/model/: example_module.yaml  malaria_patch.yaml  malaria_patch_vit.yaml
configs/model/architectures/: coatnet_0.yaml  coatnet_1.yaml  coatnet_2.yaml  coatnet_3.yaml  convnextv2_base.yaml  convnextv2_huge.yaml  convnextv2_large.yaml  convnextv2_nano.yaml  convnextv2_tiny.yaml  efficientnet_b4.yaml  maxvit_base.yaml  maxvit_large.yaml  maxvit_small.yaml  maxvit_tiny.yaml  mvitv2_base.yaml  mvitv2_large.yaml  mvitv2_small.yaml  mvitv2_tiny.yaml  nfnet_f0.yaml  nfnet_f1.yaml  nfnet_f2.yaml  nfnet_f3.yaml  swin_base.yaml  swin_large.yaml  swin_small.yaml  swin_tiny.yaml
configs/paths/: igs.yaml
configs/profiler/: advanced.yaml
configs/trainer/: default.yaml
scratch/: symlinks.sh
scratch/explore_db/: db.ipynb  example_script.sh  explore_db.py
scripts/: check_patch_cache.py  compute_class_weights.py  compute_dataset_stats.py  investigate_pid.py  investigate_pid2.py  investigate_training_stability.py  plot_aim_experiment.py  precompute_malaria_patches.py
src/: train.py
src/data/: example_datamodule.py  malaria_patch_datamodule.py
src/data/components/: __init__.py  db_client.py  example_dataset.py  invertible_transforms.py  malaria_patch_dataset.py  malaria_patch_dataset_backup.py  patch_cache.py  patch_io.py  transforms.py
src/data/utils/: __init__.py
src/models/callbacks/: agc.py  batch_size_finder.py  dual_threshold_calibrator.py  save_test_images.py  save_test_pth.py  threshold_calibrator.py
src/models/components/: model_wrapper.py  timm_classifier.py
src/models/losses/: focal_loss.py  simple_losses.py  utils.py
src/models/metrics/: malaria_metrics.py  simple_metrics.py  utils.py
src/utils/: __init__.py  config_manipulation.py  data_objects.py  enums.py  image_utils.py  sql_templates.py  utils.py
(+7 files in other folders)
